syntax = "proto3";

package orgs.v1.server.v1;

import "orgs/v1/server/v1/cluster_info.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/orgs/v1/server/v1";

message ProvisionServerRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  string region = 2 [
    (validate.rules).string = {
      in: ["us-west-2"]
    },
    (tagger.tags) = "faker:\"oneof: us-west-2\""
  ];

  bool reprovision = 3 [(tagger.tags) = "faker:\"-\""];
  bool custom_cert = 4;
}

message ProvisionServerResponse {
  string server_address = 1 [
    (validate.rules).string.min_len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  string secret_namespace = 2 [
    (validate.rules).string.min_len = 5,
    (tagger.tags) = "faker:\"len=10\""
  ];
  string secret_name = 3 [
    (validate.rules).string.min_len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];

  KubeClusterInfo kube_cluster_info = 4;
}
